--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Setup
+      run: touch .env
     - name: Build
       run: cargo build --verbose
     - name: Run tests
